--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "next": "15.1.7",
+    "mongodb": "^6.13.0",
+    "mongoose": "^8.10.0"
   },
   "devDependencies": {
     "typescript": "^5",
